Fixed some top right nav icons that were getting cut off.

--- a/maalstroom/resources/style.css
+++ b/maalstroom/resources/style.css
@@ -471,7 +471,7 @@ nav a:hover {
     background: url("images/add_address.png") no-repeat top left;
     display: inline-block;
     height: 20px;
-    width: 16px;
+    width: 17px;
     margin-top: 1.4em;
     margin-right: 1em;
 }
@@ -487,7 +487,7 @@ nav a:hover {
     background: url("images/settings.png") no-repeat top left;
     display: inline-block;
     height: 20px;
-    width: 16px;
+    width: 17px;
     margin-top: 1.4em;
     margin-right: 1.5em;
 }
